--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -65,26 +65,13 @@
       <div class="coupon">
         <h3>Apply Coupon</h3>
         <div>
-          <input type="text" placeholder="Enter Your Coupon" />
-          <button class="normal">Apply</button>
+          <input type="text" placeholder="Enter Your Coupon" id="voucher" />
+          <button class="normal" id="apply-voucher">Apply</button>
         </div>
       </div>
       <div class="subtotal">
         <h3>Cart Totals</h3>
-        <table>
-          <tr>
-            <td>Cart Subtotal</td>
-            <td>$ 335</td>
-          </tr>
-          <tr>
-            <td>Shipping</td>
-            <td>Free</td>
-          </tr>
-          <tr>
-            <td><strong>Total</strong></td>
-            <td><strong>$ 335</strong></td>
-          </tr>
-        </table>
+        <div id="total-cost"></div>
         <button class="normal">Proceed to checkout</button>
       </div>
     </section>
